--- a/style/common.css
+++ b/style/common.css
@@ -9,29 +9,39 @@
 	color: white;
 	font-weight: bolder;
 }
-a
+#otherLinks a
 {
-	color: black;
+	color: white;
 	text-decoration: none;
 }
-a:hover
+#otherLinks a:hover
 {
-	color:white;
+	color:black;
+}
+#header a
+{
+	color: white;
+	text-decoration: none;
+}
+#header a:hover
+{
+	color:black;
 }
 #otherpages
 {
-	padding-top: 3px;
-    border: hidden;
-    width: 350px;
+	margin-top:8px; 
+    width: 100%;
     height: 25px;
 }
 .horizontal_nav {
 	height: 20px;
-	border-radius: 4px;
-  	background: steelblue;
+	border-radius: 8px;
+  	text-align: center;
+  	margin-right: 20px; 
+  	display: inline-block;
 }
 .horizontal_nav:hover {
 	height: 20px;
 	border-radius: 4px;
-  	background: lightgray;
+  	display: inline-block;
 }
