--- a/style/contact.css
+++ b/style/contact.css
@@ -1,10 +1,23 @@
+h1{
+	margin-left: 250px;
+	color: black;
+}
 #contact_info
 {
+	float: left;
 	margin-left: 80px;
-	font-family: Arial;
-	font-size: 18;
+	color: black;
 }
 #contact_details{
+	font-family: Arial;
+	font-size: 18px;
 	padding-right:20px;
+	color: black;
 	font-weight:bold;
+}
+#contact_info td{
+	font-family: Arial;
+	font-size: 18px;
+	padding-right:20px;
+	color: black;
 }
